--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ h1 {
   display: grid;
   grid-template-columns: 30% 70%;
   align-items: center;
-  padding: 30px;
+  padding: 30px 80px 30px 80px;
 }
 
 .text p {
@@ -125,7 +125,6 @@ h1 {
 .para-sec-two {
   color: var(--Dark-Grey, #444);
   font-feature-settings: "clig" off, "liga" off;
-
   font-family: Outfit;
   font-size: 22px;
   font-style: normal;
@@ -134,43 +133,46 @@ h1 {
 }
 
 /* grid-2 */
-.container1 {
+.container2 {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr) repeat(4, 1fr);
+  padding: 30px 80px 80px 80px;
+}
+
+/* Style for the left side (4 columns) */
+.left-side {
+  grid-column: span 7;
   display: flex;
-  grid-gap: 210px;
-  grid-template-columns: 70% 30%;
-  flex-direction: row;
-  padding: 20px 30px 80px 30px;
 }
 
-.left-image {
-  flex: 1;
-  width: 70%;
-}
-
-.left-image img {
-  width: 635px;
-  height: 720px;
-}
-
-.right-images {
-  flex: 1;
+/* Style for the right side (8 columns) */
+.right-side {
+  grid-column: span 5;
   display: flex;
   flex-direction: column;
-  width: 30%;
 }
 
-.image-column {
-  flex: 1;
+/* Style for images */
+img {
+  max-width: 100%;
+  max-height: 100%;
+  justify-items: stretch;
+}
+
+/* Make the layout responsive */
+@media screen and (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+  .right-side {
+    grid-column: span 1;
+  }
 }
 .image-column2 {
-  flex: 1;
+  padding: 20px;
   background: var(--Almost-Black, #151515);
 }
 
-.image-column img {
-  width: 445px;
-  height: 313px;
-}
 .grid3-h1 {
   color: var(--White, #fff);
   font-feature-settings: "clig" off, "liga" off;
