--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ img {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
+  padding: 0px 80px 0px 80px;
 }
 
 .logo-text {
